Improve the footnote about Betty Andreasson

--- a/tex/p036.tex
+++ b/tex/p036.tex
@@ -40,7 +40,7 @@
 \usection{4.\bibnobreakspace Melchizedek Life Carriers}
 \vs p036 4:1 In every local system of inhabited worlds throughout Nebadon there is a single sphere whereon the Melchizedeks have functioned as life carriers. These abodes are known as the system \bibemph{midsonite} worlds, and on each of them a materially modified Melchizedek Son has mated with a selected Daughter of the material order of sonship. The Mother Eves of such midsonite worlds are dispatched from the system headquarters of jurisdiction, having been chosen by the designated Melchizedek life carrier from among the numerous volunteers who respond to the call of the System Sovereign addressed to the Material Daughters of his sphere.
 \vs p036 4:2 The progeny of a Melchizedek life carrier and a Material Daughter are known as \bibemph{midsoniters.} The Melchizedek father of such a race of supernal creatures eventually leaves the planet of his unique life function, and the Mother Eve of this special order of universe beings also departs upon the appearance of the 7\ts{th} generation of planetary offspring. The direction of such a world then devolves upon her eldest son.
-\vs p036 4:3 The midsonite creatures live and function as reproducing beings on their magnificent worlds until they are 1,000 standard years of age; whereupon they are translated by seraphic transport. Midsoniters are nonreproducing beings thereafter because the technique of dematerialization which they pass through in preparation for enseraphiming forever deprives them of reproductive prerogatives\fnst{\textbf{dematerialization \ldots\ forever deprives them of reproductive prerogatives}, Is this also true of normal human mortals? If so, then it would appear that the experiences of Betty Andreasson cannot be explained as a journey in the transport seraphim. Rather, they were more likely to be the projections of the Thought Adjuster of this highly spiritually developed person, permeated by love and unselfish service. The evidence for Betty being enseraphimed is based solely on her perception of immersion in the white liquid-like cloudy substance during the trip, which also formed a part of my own \bibemph{very similar} experiences. However, we know too little about the mechanism of the detachment of Thought Adjuster from the body to conclude that ``passing through the white cloud'' (as was witnessed by several other prophets, both ancient and modern) is necessarily an indication of being transport-enseraphimed. For more information I highly recommend the series of five books by Raymond~E. Fowler which document the numerous contacts of Betty Andreasson with what appears to be the seraphic Planetary Government, namely: 1. \bibemph{The Andreasson Affair}, 2. \bibemph{The Andreasson Affair: Phase Two}, 3. \bibemph{The Watchers}, 4. \bibemph{The Watchers II}, 5. \bibemph{The Andreasson Legacy}.}.
+\vs p036 4:3 The midsonite creatures live and function as reproducing beings on their magnificent worlds until they are 1,000 standard years of age; whereupon they are translated by seraphic transport. Midsoniters are nonreproducing beings thereafter because the technique of dematerialization which they pass through in preparation for enseraphiming forever deprives them of reproductive prerogatives\fnst{\textbf{dematerialization \ldots\ forever deprives them of reproductive prerogatives}, Is this also true of normal human mortals? If so, then it would appear that the experiences of Betty Andreasson cannot be explained as a journey in the transport seraphim. Rather, they were more likely to be the projections of the Thought Adjuster of this highly spiritually developed person, permeated by love and unselfish service. The evidence for Betty being enseraphimed is based solely on her perception of immersion in the white liquid-like cloudy substance during the trip, which also formed a part of my own \bibemph{very similar} experiences. However, we know too little about the mechanism of the detachment of Thought Adjuster from the body to conclude that ``passing through the white cloud'' (as was witnessed by several other prophets, both ancient and modern) is necessarily an indication of being transport-enseraphimed. For more information I recommend the series of five books by Raymond~E. Fowler which document the numerous contacts of Betty Andreasson with what appears to be the seraphic Planetary Government, namely: 1. \bibemph{The Andreasson Affair}, 2. \bibemph{The Andreasson Affair: Phase Two}, 3. \bibemph{The Watchers}, 4. \bibemph{The Watchers II}, 5. \bibemph{The Andreasson Legacy}. Note, however, that 99\% of the information presented in these books is sheer imagination (due to inevitable \bibemph{hypnotic confabulation}), so one has to exercise wisdom to extract the precious remaining 1\% of real truth.}.
 \vs p036 4:4 The present status of these beings can hardly be reckoned as either mortal or immortal, neither can they be definitely classified as human or divine. These creatures are not Adjuster indwelt, hence hardly immortal. But neither do they seem to be mortal; no midsoniter has experienced death. All midsoniters ever born in Nebadon are alive today, functioning on their native worlds, on some intervening sphere, or on the Salvington midsonite sphere in the finaliters’ group of worlds.
 \vs p036 4:5 \pc \bibemph{The Salvington Worlds of the Finaliters.} The Melchizedek life carriers, as well as the associated Mother Eves, go from the system midsonite spheres to the finaliters’ worlds of the Salvington circuit, where their offspring are also destined to forgather.
 \vs p036 4:6 It should be explained in this connection that the fifth group of 7 primary worlds in the Salvington circuit are the Nebadon worlds of the finaliters. The children of the Melchizedek life carriers and the Material Daughters are domiciled on the 7\ts{th} world of the finaliters, the Salvington midsonite sphere.
