--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -40,28 +40,28 @@
 %\tunemarkuptag{newjournal}
 
 % comment out for public PDF build
-%\tunemarkuptag{private}
+\tunemarkuptag{private}
 
 % comment out to disable pictures
-%\tunemarkuptag{pictures}
+\tunemarkuptag{pictures}
 
 % comment out to enable footnotes
-\tunemarkuptag{nofnt}
+%\tunemarkuptag{nofnt}
 
 % comment out to disable fancy lettrine letters
 %\tunemarkuptag{fancylettrine}
 
 % comment out to disable Introduction
-%\tunemarkuptag{introinclude}
+\tunemarkuptag{introinclude}
 
 % comment out to enable fancy page decorations
 %\tunemarkuptag{nofancydecor}
 
 % comment out to disable cover image
-%\tunemarkuptag{coverimage}
+\tunemarkuptag{coverimage}
 
 % comment out to enable Cosmic Citizenship Quiz
-\tunemarkuptag{noquiz}
+%\tunemarkuptag{noquiz}
 
 \setdefaultlanguage{english}
 
@@ -70,9 +70,9 @@
 %\def\urantiaparttitlefont{Garamond Premier Pro Semibold Display}
 \def\urantiaparttitlefont{GoudyHandtooled BT}
 \def\urantiatitlefont{Garamond Premier Pro Semibold Display}
-\def\urantiaheaderfont{Garamond Premier Pro Medium Subhead}
+\def\urantiaheaderfont{Garamond Premier Pro Semibold Subhead}
 \def\urantiaheadingfont{Arial Narrow Bold}
-\def\urantiaheaderackfont{Garamond Premier Pro Medium Subhead}
+\def\urantiaheaderackfont{Garamond Premier Pro Semibold Subhead}
 \def\urantiaexplfont{Garamond Premier Pro Medium Italic}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
@@ -112,7 +112,7 @@
 \def\urantiamainfont{Academy}
 \def\urantiaparttitlefont{GoudyHandtooled BT}
 \def\urantiatitlefont{Academy}
-\def\urantiaheaderfont{Academy}
+\def\urantiaheaderfont{Academy Bold}
 \def\urantiaheadingfont{Arial Narrow Bold}
 \def\urantiaheaderackfont{Academy}
 \def\urantiaexplfont{Academy}
