--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -17,10 +17,10 @@
 \RequirePackage[\tunemarkup{pgkindledx}{doublecol,}parvs]{ubook}
 
 % various font families
-%\tunemarkuptag{garamond}
+\tunemarkuptag{garamond}
 %\tunemarkuptag{goudy}
 %\tunemarkuptag{minionpro}
-\tunemarkuptag{academy}
+%\tunemarkuptag{academy}
 %\tunemarkuptag{palatino}
 %\tunemarkuptag{oldstandard}
 %\tunemarkuptag{gentium}
@@ -933,7 +933,7 @@
 \newcommand{\parttitlefontsize}{\addfontfeature{LetterSpace=4.0,WordSpace=1.1}\LARGE}
 \renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2,WordSpace=1.2}\fontsize{15}{17}\bfseries}
 \renewcommand{\bibtocfont}{\fontsize{12.0}{19}\selectfont}
-\newcommand{\bibsectitlefont}{\fontsize{10}{10}\mdseries}
+\newcommand{\bibsectitlefont}{\fontsize{10}{10}\selectfont}
 \renewcommand{\footnotesize}{\fontsize{14}{16}\selectfont}
 \setlength{\minitocafterskip}{-0.5ex}
 }
@@ -1052,7 +1052,7 @@
       \ifnum #1=32\partii\fi
       \ifnum #1=57\partiii\fi
       \ifnum #1=120\partiv\fi
-      \ifnum #1>0\headerfont\bibpaperfont\papertxt\ #1\\\fi
+      \headerfont\bibpaperfont\ifnum #1>0\papertxt\ #1\\\fi
       {\addfontfeatures{WordSpace=2.0,LetterSpace=3.0}\bibpapertitlefont\hyperlink{qc#1}{\MakeUppercase{#2}}}\\
       \input{tex/p\thepaper-sections.tex}%
    \end{center}%
@@ -1074,7 +1074,7 @@
 }
 
 \newcommand{\parti}{%
-\thispagestyle{empty}%
+\newpage\thispagestyle{empty}%
 \vspace*{\stretch{0.1}}%
 {\parttitlefont\parttitlefontsize\partitxt\\\partiup\\[2ex]}
 \begin{center}\subfont\partisub\end{center}%
