--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -956,12 +956,10 @@
 \renewcommand{\bibheadchapsize}{\fontsize{7.5}{7.5}\selectfont}
 \renewcommand{\bibheadversesize}{\fontsize{7}{7}\selectfont}
 \renewcommand{\bibheadpagesize}{\fontsize{8}{8}\selectfont}
-\newcommand{\subfont}{\fontsize{10}{10}\itshape}
-\newcommand{\parttitlefontsize}{\large}
+\newcommand{\subfont}{\fontsize{13}{15}\itshape}
+\newcommand{\parttitlefontsize}{\addfontfeature{LetterSpace=4.0,WordSpace=1.1}\LARGE}
 \newcommand{\bibsectitlefont}{\fontsize{10}{12}\selectfont}
 \renewcommand{\footnotesize}{\fontsize{14}{16}\selectfont}
-\newcommand{\bibbookend}{\fontsize{16}{17.5}\selectfont}
-\newcommand{\urantiamainfontsize}{16/17.5}
 \setlength{\minitocafterskip}{-0.15ex}
 }
 
