Make Arno default and fix the font used for the Ack in Foreword

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -17,7 +17,7 @@
 \RequirePackage[\tunemarkup{pgkindledx}{doublecol,}parvs]{ubook}
 
 % various font families
-\tunemarkuptag{garamond}
+%\tunemarkuptag{garamond}
 %\tunemarkuptag{goudy}
 %\tunemarkuptag{minionpro}
 %\tunemarkuptag{academy}
@@ -25,7 +25,7 @@
 %\tunemarkuptag{oldstandard}
 %\tunemarkuptag{gentium}
 %\tunemarkuptag{bookman}
-%\tunemarkuptag{arno}
+\tunemarkuptag{arno}
 %\tunemarkuptag{century}
 %\tunemarkuptag{cambria}
 %\tunemarkuptag{agora}
@@ -184,7 +184,7 @@
 \def\urantiatitlefont{Arno Pro Semibold Display}
 \def\urantiaheaderfont{Arno Pro Semibold Subhead}
 \def\urantiaheadingfont{Arial Narrow Bold}
-\def\urantiaheaderackfont{Arno Pro}
+\def\urantiaheaderackfont{Arno Pro Semibold Subhead}
 \def\urantiaexplfont{Arno Pro}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
