--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -871,10 +871,10 @@
 \renewcommand{\bibfnchapsize}{\headerfont\Large}
 \renewcommand{\bibfnvssize}{\headerfont\large}
 \newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\huge ahb}}
-\newcommand{\subfont}{\fontsize{10}{9}\itshape}
+\newcommand{\subfont}{\fontsize{16}{18}\itshape}
 \newcommand{\parttitlefontsize}{\large}
-\newcommand{\bibbookend}{\fontsize{20}{22}\selectfont}
-\newcommand{\urantiamainfontsize}{20/22}
+\renewcommand{\bibbookend}{\fontsize{21}{24}\selectfont}
+\renewcommand{\urantiamainfontsize}{21/24}
 \renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2,WordSpace=1.2}\fontsize{13}{15}\bfseries}
 \renewcommand{\bibtocfont}{\fontsize{10.5}{17}\selectfont}
 \newcommand{\bibsectitlefont}{\fontsize{8}{9}\selectfont}
@@ -977,8 +977,8 @@
 \newcommand{\subfont}{\fontsize{13}{15}\itshape}
 \newcommand{\parttitlefontsize}{\LARGE}
 \renewcommand{\footnotesize}{\fontsize{14}{16}\selectfont}
-\newcommand{\bibbookend}{\fontsize{16}{18}\selectfont}
-\newcommand{\urantiamainfontsize}{16/18}
+\renewcommand{\bibbookend}{\fontsize{16}{18}\selectfont}
+\renewcommand{\urantiamainfontsize}{16/18}
 \newcommand{\bibpaperfont}{\fontsize{15.0}{18}\bfseries}
 \newcommand{\bibpapertitlefont}{\fontsize{16.0}{19.0}\bfseries}
 \newcommand{\bibsectitlefont}{\fontsize{10}{10}\selectfont}
