Include the picture of a statue mentioned in the text.

--- a/tex/p111.tex
+++ b/tex/p111.tex
@@ -4,7 +4,7 @@
 \vs p111 0:2 \pc The concept of a soul and of an indwelling spirit is not new to Urantia; it has frequently appeared in the various systems of planetary beliefs. Many of the Oriental as well as some of the Occidental faiths have perceived that man is divine in heritage as well as human in inheritance. The feeling of the inner presence in addition to the external omnipresence of Deity has long formed a part of many Urantian religions. Men have long believed that there is something growing within the human nature, something vital that is destined to endure beyond the short span of temporal life.
 \vs p111 0:3 Before man realized that his evolving soul was fathered by a divine spirit, it was thought to reside in different physical organs --- the eye, liver, kidney, heart, and later, the brain. The savage associated the soul with blood, breath, shadows and with reflections of the self in water.
 \vs p111 0:4 In the conception of the \bibemph{atman} the Hindu teachers really approximated an appreciation of the nature and presence of the Adjuster, but they failed to distinguish the copresence of the evolving and potentially immortal soul. The Chinese, however, recognized two aspects of a human being, the \bibemph{yang} and the \bibemph{yin,} the soul and the spirit. The Egyptians and many African tribes also believed in two factors, the \bibemph{ka} and the \bibemph{ba;} the soul was not usually believed to be pre\hyp{}existent, only the spirit.
-\vs p111 0:5 The inhabitants of the Nile valley believed that each favoured individual had bestowed upon him at birth, or soon thereafter, a protecting spirit which they called the ka. They taught that this guardian spirit remained with the mortal subject throughout life and passed before him into the future estate. On the walls of a temple at Luxor, where is depicted the birth of Amenhotep III, the little prince is pictured on the arm of the Nile god, and near him is another child, in appearance identical with the prince, which is a symbol of that entity which the Egyptians called the ka. This sculpture was completed in the fifteenth century before Christ.
+\vs p111 0:5 The inhabitants of the Nile valley believed that each favoured individual had bestowed upon him at birth, or soon thereafter, a protecting spirit which they called the ka. They taught that this guardian spirit remained with the mortal subject throughout life and passed before him into the future estate. On the walls of a temple at Luxor, where is depicted the birth of Amenhotep III, the little prince is pictured on the arm of the Nile god, and near him is another child, in appearance identical with the prince, which is a symbol of that entity which the Egyptians called the ka. This sculpture was completed in the fifteenth century before Christ.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkobomini}{2.1}\tunemarkup{pgkoboaurahd}{2.36}\tunemarkup{pghanlin}{0.52}\tunemarkup{pgnexus7}{2.0}\tunemarkup{pgkindledx}{1.6}]{images/AmenhotepIII-and-his-Ka.jpg}\caption{The infant king, Amenophis III and his Ka, presented to Amen Rā, the god of Thebes, by two Nile gods, and by Horus. \bibemph{From the temple of Amenophis III, at Luxor.}}\end{figure}}
 \vs p111 0:6 The ka was thought to be a superior spirit genius which desired to guide the associated mortal soul into the better paths of temporal living but more especially to influence the fortunes of the human subject in the hereafter. When an Egyptian of this period died, it was expected that his ka would be waiting for him on the other side of the Great River. At first, only kings were supposed to have kas, but presently all righteous men were believed to possess them. One Egyptian ruler, speaking of the ka within his heart, said: “I did not disregard its speech; I feared to transgress its guidance. I prospered thereby greatly; I was thus successful by reason of that which it caused me to do; I was distinguished by its guidance.” Many believed that the ka was “an oracle from God in everybody.” Many believed that they were to “spend eternity in gladness of heart in the favour of the God that is in you.”
 \vs p111 0:7 Every race of evolving Urantia mortals has a word equivalent to the concept of soul. Many primitive peoples believed the soul looked out upon the world through human eyes; therefore did they so cravenly fear the malevolence of the evil eye. They have long believed that “the spirit of man is the lamp of the Lord.” The Rig\hyp{}Veda says: “My mind speaks to my heart.”
 \usection{1.\bibnobreakspace The Mind Arena of Choice}
