Remove erroneous footnote at 114:7.13 (962 vs 1000 mortals).

--- a/tex/p114.tex
+++ b/tex/p114.tex
@@ -76,7 +76,7 @@
 \vs p114 7:10 The reservists unconsciously act as conservators of essential planetary information. Many times, upon the death of a reservist, a transfer of certain vital data from the mind of the dying reservist to a younger successor is made by a liaison of the two Thought Adjusters. The Adjusters undoubtedly function in many other ways unknown to us, in connection with these reserve corps.
 \vs p114 7:11 On Urantia the reserve corps of destiny, though having no permanent head, does have its own permanent councils which constitute its governing organization. These embrace the judiciary council, the historicity council, the council on political sovereignty, and many others. From time to time, in accordance with the corps organization, titular (mortal) heads of the whole reserve corps have been commissioned by these permanent councils for specific function. The tenure of such reservist chiefs is usually a matter of a few hours’ duration, being limited to the accomplishment of some specific task at hand.
 \vs p114 7:12 The Urantia reserve corps had its largest membership in the days of the Adamites and Andites, steadily declining with the dilution of the violet blood and reaching its low point around the time of Pentecost, since which time reserve corps membership has steadily increased.
-\vs p114 7:13 \pc (The cosmic reserve corps of universe\hyp{}conscious citizens on Urantia now numbers over 1,000 mortals\fnst{\textbf{over 1,000 mortals}, Just a few paragraphs earlier, this number was said to be 962.} whose insight of cosmic citizenship far transcends the sphere of their terrestrial abode, but I am forbidden to reveal the real nature of the function of this unique group of living human beings.)
+\vs p114 7:13 \pc (The cosmic reserve corps of universe\hyp{}conscious citizens on Urantia now numbers over 1,000 mortals whose insight of cosmic citizenship far transcends the sphere of their terrestrial abode, but I am forbidden to reveal the real nature of the function of this unique group of living human beings.)
 \vs p114 7:14 \pc Urantia mortals should not allow the comparative spiritual isolation of their world from certain of the local universe circuits to produce a feeling of cosmic desertion or planetary orphanage. There is operative on the planet a very definite and effective superhuman supervision of world affairs and human destinies.
 \vs p114 7:15 But it is true that you can have, at best, only a meagre idea of an ideal planetary government. Since the early times of the Planetary Prince, Urantia has suffered from the miscarriage of the divine plan of world growth and racial development. The loyal inhabited worlds of Satania are not governed as is Urantia. Nevertheless, compared with the other isolated worlds, your planetary governments have not been so inferior; only one or two worlds may be said to be worse, and a few may be slightly better, but the majority are on a plane of equality with you.
 \vs p114 7:16 No one in the local universe seems to know when the unsettled status of the planetary administration will terminate. The Nebadon Melchizedeks are inclined to the opinion that little change will occur in the planetary government and administration until Michael’s second personal arrival on Urantia. Undoubtedly at this time, if not before, sweeping changes will be effected in planetary management. But as to the nature of such modifications of world administration, no one seems to be able even to conjecture. There is no precedent for such an episode in all the history of the inhabited worlds of the universe of Nebadon. Among the many things difficult to understand concerning the future government of Urantia, a prominent one is the location on the planet of a circuit and divisional headquarters of the archangels.
