Mention Jim George in the Introduction

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -34,7 +34,8 @@ It has the following main features:
 \end{itemize}
 
 For deriving the etymology of the words coined by the revelators, I acknowledge the use of the notes by Dr~Chris Halvorson.
-Many thanks to my friend Mitch Austin for helpful suggestions and comments, some of which have been incorporated into the study notes of the present edition.
+Many thanks to my friends Jim George and Mitch Austin for their helpful suggestions and comments,
+some of which have been incorporated into the study notes of the present edition.
 Last, but not least, I am deeply grateful to Troy R.~Bishop, whom I am honoured to consider to be my mentor and friend.
 I highly recommend many resources available on his website at \texttt{http://www.starspring.com}.
 
