Change some font size for Kobo Mini build

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -872,9 +872,9 @@
 \renewcommand{\bibfnvssize}{\headerfont\large}
 \newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\huge ahb}}
 \newcommand{\subfont}{\fontsize{16}{18}\itshape}
-\newcommand{\parttitlefontsize}{\large}
-\renewcommand{\bibbookend}{\fontsize{21}{24}\selectfont}
-\renewcommand{\urantiamainfontsize}{21/24}
+\newcommand{\parttitlefontsize}{\Large}
+\renewcommand{\bibbookend}{\fontsize{19}{21}\selectfont}
+\renewcommand{\urantiamainfontsize}{19/21}
 \renewcommand{\bibtocheadfont}{\addfontfeature{LetterSpace=1.2,WordSpace=1.2}\fontsize{13}{15}\bfseries}
 \renewcommand{\bibtocfont}{\fontsize{10.5}{17}\selectfont}
 \newcommand{\bibsectitlefont}{\fontsize{8}{9}\selectfont}
