Add a couple of questions to the Cosmic Citizenship Quiz.

--- a/tex/quiz.tex
+++ b/tex/quiz.tex
@@ -5563,6 +5563,21 @@
 
 \qpaper{127}{The Adolescent Years}
 
+\qstart{Who was the officer of the Galilean division of the party of Zealots?}
+{Jesus}{0}
+{Jesus' uncle, Simon}{1}
+{Jesus' sister, Ruth}{0}
+{Jesus' father, Joseph}{0}
+\qstop
+
+\qstart{What was the reason for estrangement between Jesus and his uncle Simon?}
+{Jesus' refusal to accept the title of Messiah}{0}
+{Simon's refusal to accept Jesus' leadership of the Zealots}{0}
+{Jesus' refusal to join the party of Zealots}{1}
+{Jesus' refusal to honour his uncle Simon in public}{0}
+{Simon's refusal to learn Hebrew}{0}
+\qstop
+
 \qpaper{128}{Jesus’ Early Manhood}
 
 \qpaper{129}{The Later Adult Life of Jesus}
